Decreased the size & updated the verbiage

--- a/birthDayJS/index.html
+++ b/birthDayJS/index.html
@@ -8,7 +8,7 @@
 
 
 <body>
-<h1>check what day of the week you were born</h1>
+<h3>Check what day</h3>
 <div class="calculator">
 
 <input id="month" placeholder="MM" type="number" >
